[project]
name = "website-developer"
version = "0.1.0"
description = "Automated web application builder API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic[email]>=2.12.0",
    "uvicorn>=0.37.0",
    "httpx>=0.25.0",
    "pygithub>=1.59.0",
    "python-multipart>=0.0.6",
]
