[project]
name = "website-developer"
version = "0.1.0"
description = "Automated web application builder API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic[email]>=2.12.0",
    "uvicorn>=0.37.0",
    "httpx>=0.25.0",
    "pygithub>=1.59.0",
    "python-multipart>=0.0.6",
    "langchain>=0.3.27",
    "langgraph>=0.6.10",
    "langchain-google-genai>=2.1.12",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0.1",
]
